--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ EMAIL_PORT=465
 EMAIL_HOST=smtp.emailemnuvem.com.br
 RESPONSIBLE_EMAIL=everton@guaracidigital.com.br
 JWT_SECRET=GuaraciSucesso_Whol
-FRONTEND_URL=http://164.152.51.110/
+FRONTEND_URL=https://pague-guaracidigital.vercel.app/
